--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="C:\Users\ogyt2\OneDrive\Desktop\C779 Web Development\HTML - Personal Site\Images\Demon.jpg" alt="Angel of Death"></td>
+                <td><img src="Images/Demon.jpg" alt="Angel of Death"></td>
                 <td><h1>Emilio Tarango</h1>
         <p><em>Transportation Security Officer and student at <strong><a href="https://www.wgu.edu/">Western Governors University</a></strong>.</em></p>
         <p>I work at Dallas/ Fort Worth International Airport. I like playing video games.</p></td>
